@@ -30,7 +30,7 @@
         page-object rocks!
     </div>
 
-    <span id="span_id" name="span_name" class="span_class">
+    <span id="span_id" name="span_name" class="span_class" title="span_title">
       My alert
     </span>
     
