@@ -6,14 +6,14 @@ describe PageObject::Elements::Span do
 
   describe "when mapping how to find an element" do
     it "should map watir types to same" do
-      [:class, :id, :index, :text, :xpath].each do |t|
+      [:class, :id, :index, :text, :title, :xpath].each do |t|
         identifier = span.watir_identifier_for t => 'value'
         identifier.keys.first.should == t
       end
     end
 
     it "should map selenium types to same" do
-      [:class, :id, :index, :name, :text, :xpath].each do |t|
+      [:class, :id, :index, :name, :text, :title, :xpath].each do |t|
         key, value = span.selenium_identifier_for t => 'value'
         key.should == t
       end
